[package]
name = "tinyrocket"
version = "0.1.0"
authors = ["Katharina Fey <kookie@spacekookie.de>"]

[dependencies]
rocket = "*"
rocket_codegen = "*"
rocket_contrib = "*"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
incremental = false
opt-level = "z"

[profile.dev]
panic = "abort"
lto = true
codegen-units = 1
incremental = false
opt-level = "z"